--- a/ITC.InfoTrack/Areas/Corporate/Views/Corporate/ScheduleDataCollect.cshtml
+++ b/ITC.InfoTrack/Areas/Corporate/Views/Corporate/ScheduleDataCollect.cshtml
@@ -50,14 +50,20 @@
                 <div id="error"></div>
                 <div class="mt-4">
                     <div class="row g-3">
-                        <div class="col-12 col-md-3">
-                            <label for="metaelementTitle" class="form-label">Date Time<span class="text-danger">*</span></label>
-                            <input type="date" class="form-control" name="datevalue" id="datevalue" value="@today" />
+                        <div class="col-12 col-md-2">
+                            <label for="metaelementTitle" class="form-label">Type Area<span class="text-danger">*</span></label>
+                            @Html.DropDownList("AreaId", ViewBag.area as SelectList, "Select Type", new { @class = "form-control select2", @id = "AreaId",
+                            onchnage="AreaWiseDataLoad(this)"})
+
+                        </div>
+                        <div class="col-12 col-md-2">
+                            <label for="metaelementTitle" class="form-label">Division<span class="text-danger">*</span></label>
+                            @Html.DropDownList("DivisionId", ViewBag.division as SelectList, "Select Division", new { @class = "form-control select2", @id = "DivisionId" })
 
                         </div>
                         <div class="col-12 col-md-3">
-                            <label for="metaelementTitle" class="form-label">Type<span class="text-danger">*</span></label>
-                            @Html.DropDownList("typeId", ViewBag.type as SelectList, "Select Type", new { @class = "form-select", @id = "typeId", onchange = "TypeWiseSource()" })
+                            <label for="metaelementTitle" class="form-label">Source Type<span class="text-danger">*</span></label>
+                            @Html.DropDownList("typeId", ViewBag.type as SelectList, "Select Type", new { @class = "form-control select2", @id = "typeId", onchange = "TypeWiseSource()" })
 
                         </div>
                        @*  <div class="col-12 col-md-2">
@@ -69,9 +75,9 @@
                             @Html.DropDownList("divisionId", ViewBag.division as SelectList, "Select Division", new { @class = "form-select w-100", @id = "divisionId" })
                         </div>
  *@
-                        <div class="col-12 col-md-3">
+                        <div class="col-12 col-md-4">
                             <label for="metaelementTitle" class="form-label" id="typelevel">Type Name<span class="text-danger">*</span></label>
-                            <select class="form-select w-100" name="typename" id="typename" onchange="LoadData()">
+                            <select class="form-control select2 w-100" name="typename" id="typename" onchange="LoadData()">
                                 <option value="0">Select Type Name</option>
                             </select>
 
@@ -159,41 +165,33 @@
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 @section scripts {
-    <!-- apexcharts -->
-    <!-- jquery.vectormap map -->
-    <script src="~/libs/admin-resources/jquery.vectormap/jquery-jvectormap-1.2.2.min.js"></script>
-    <script src="~/libs/admin-resources/jquery.vectormap/maps/jquery-jvectormap-us-merc-en.js"></script>
     <!-- Required datatable js -->
     <script src="~/libs/datatables.net/js/jquery.dataTables.min.js"></script>
     <script src="~/libs/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
     <!-- Buttons examples -->
     <script src="~/libs/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
     <script src="~/libs/datatables.net-buttons-bs4/js/buttons.bootstrap4.min.js"></script>
-    <script src="~/libs/jszip/jszip.min.js"></script>
-    <script src="~/libs/pdfmake/build/pdfmake.min.js"></script>
-    <script src="~/libs/pdfmake/build/vfs_fonts.js"></script>
-    <script src="~/libs/datatables.net-buttons/js/buttons.html5.min.js"></script>
-    <script src="~/libs/datatables.net-buttons/js/buttons.print.min.js"></script>
-    <script src="~/libs/datatables.net-buttons/js/buttons.colVis.min.js"></script>
-    <script src="~/libs/datatables.net-keytable/js/dataTables.keyTable.min.js"></script>
-    <script src="~/libs/datatables.net-select/js/dataTables.select.min.js"></script>
+    <script src="~/libs/select2/js/select2.min.js"></script>
+    <script src="~/libs/bootstrap-datepicker/js/bootstrap-datepicker.min.js"></script>
+    <script src="~/libs/spectrum-colorpicker2/spectrum.min.js"></script>
+    <script src="~/libs/bootstrap-touchspin/jquery.bootstrap-touchspin.min.js"></script>
+    <script src="~/libs/admin-resources/bootstrap-filestyle/bootstrap-filestyle.min.js"></script>
+    <script src="~/libs/bootstrap-maxlength/bootstrap-maxlength.min.js"></script>
+    <script src="~/js/pages/form-advanced.init.js"></script>
+    <script src="~/js/app.js"></script>
     <!-- Responsive examples -->
     <script src="~/libs/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
     <script src="~/libs/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js"></script>
     <!-- Datatable init js -->
     <script src="~/js/pages/datatables.init.js"></script>
-    <script src="~/js/app.js"></script>
 
 }
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
-<script src="~/libs/select2/js/select2.min.js"></script>
+
 
 <script>
-    $('#typename').select2({
-           placeholder: "Select Type Name",
-           allowClear: true
-    });
+   
 
 
     function TypeWiseSource()
